<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Limb</string>
    <string name="map_key" translatable="false">AIzaSyB_qsP8AOP_P0MdlPz-48TDaJYjTP3vbjo</string>
    <string name="accounts_text">"Счет"</string>
    <string name="add_operation_text">"Добавить запись"</string>
    <string name="menu_text">"Меню"</string>
    <string name="balance_text">"Баланс"</string>
    <string name="records_text">"Записи"</string>
    <string name="expense_text">"Расход"</string>
    <string name="income_text">"Доход"</string>
    <string name="transfer_text">"Перевод"</string>
    <string name="language_text">"Язык"</string>
    <string name="language1_text">"Русский"</string>
    <string name="language2_text">"Английский"</string>
    <string name="currency_text">"Валюта"</string>
    <string name="main_text">"Основной"</string>
    <string name="category_text">"Категория"</string>
    <string name="detail">"Подробнее"</string>
    <string name="location">"Местоположение"</string>
    <string name="сreate">"Создать"</string>
    <string name="search">"Поиск..."</string>
    <string name="f_and_d">"Еда и напитки"</string>
    <string name="purchases">"Покупки"</string>
    <string name="housing">"Жильё"</string>
    <string name="transport">"Транспорт"</string>
    <string name="vehicle">"Транспортное средство"</string>
    <string name="l_and_e">"Жизнь и развлечения"</string>
    <string name="cpc">"Связь, ПК"</string>
    <string name="financial_expenses">"Финансовые расходы"</string>
    <string name="investment">"Инвестиции"</string>
    <string name="etc">"Прочее"</string>
    <string name="noInternet">"Нет интернета"</string>
    <string name="email">"Почта"</string>
    <string name="password">"Пароль"</string>
    <string name="signin">"Войти"</string>
    <string name="foryourpassword">"Забыли пароль?"</string>
    <string name="registration">"РЕГИСТРАЦИЯ"</string>
    <string name="passwordsendtoyouremail">"Пароль отправлен на вашу электронную почту"</string>
    <string name="enteryouremailaddress">"Введите почту"</string>
    <string name="enterthepassword">"Введите пароль"</string>
    <string name="registrationsuccessful">"Регистрация успешна"</string>
    <string name="registrationfailed">"Регистрация провалена"</string>
    <string name="authenticationissuccessful">"Aвторизация успешна"</string>
    <string name="authorizationfailed">"Aвторизация провалена"</string>
    <string name="tochange">"Изменить"</string>
    <string name="notenoughdata">"Недостаточно данных"</string>
    <string name="thesum">"Сумма"</string>
    <string name="fillinthefollowinginformation">"Заполните следующие данные:"</string>
    <string name="profile">"<u>Профиль</u>"</string>
    <string name="changeemail">"Изменить почту"</string>
    <string name="passwordchange">"Смена пароля"</string>
    <string name="changepassword">"Изменить пароль"</string>
    <string name="getout">"Выйти"</string>
    <string name="deleteanaccount">"Удалить аккаунт"</string>
    <string name="areyousure">"Вы уверены?"</string>
    <string name="yes">"Да"</string>
    <string name="no">"Нет"</string>
    <string name="accountdeleted">"Аккаунт удален"</string>
    <string name="mailwaschangedsuccessfully">"Почта сменена успешно"</string>
    <string name="error">"Ошибка"</string>
    <string name="passwordchangedsuccessfully">"Пароль сменён успешно"</string>
    <string name="abouttheprogram">"О программе"</string>
    <string name="abouttheprogram2">"Название проекта: Мобильное приложение «Учет финансов» ООО «Оранжсофт Девелопмент» под систему Android."</string>
    <string name="abouttheprogram3">"Проект выполнял: Кулай Денис Сергеевич."</string>
    <string name="abouttheprogram4">"Учащийся колледжа Бизнеса и права, группы Т-711."</string>
    <string name="abouttheprogram5">"Версия программы - 1.0"</string>
    <string name="abouttheprogram6">"Требуемая версия Android - 8.0 и новее"</string>
    <string name="statistics">"Статистика "</string>
    <string name="help">"Справка"</string>
    <string name="resetinformation">"Сброс информации"</string>
    <string name="Anonymous">"Анонимный вход"</string>
    <string name="workingintheprogram">"Работа в программой"</string>
    <string name="theWindowAccount">"Окно \"Счёт\" "</string>
    <string name="help1">"В данном окне выводится список проведённых операций с возможностью их редактирования и удаления. Просмотр выбранной валюты.  Помимо этого, есть возможность изменить значение баланса на необходимое по нажатию на значок карандаша."</string>
    <string name="theWindowAdd">"Окно \"Добавить\" "</string>
    <string name="help2">"Данное окно предназначено для добавление новых операций. Можно выбрать тип операций, валюту, категорию, дату, время, описание и местоположение."</string>
    <string name="theWindowMenu">"Окно \"Меню\" "</string>
    <string name="help3">"Данное окно предназначено для редактирования приложение и вывода дополнительной информации. Можно сменить язык приложения или валюту на любую из предложенных. Вывести статистику по операциям. Посмотреть справку и информацию о программе. Помимо этого, есть возможность редактирование профиля пользователя, где можно поменять почту, пароль или удалить аккаунт. "</string>
    <string name="email_text">"Подтвердите регистрацию, перейдите по ссылке в письме, которое придёт на ваш электронный адрес."</string>
    <string name="anon_text">"Произошла ошибка при входе в систему"</string>
    <string name="pass2_text">"Пароль меньше 6 символов"</string>
    <string name="email2_text">"Электронная почта уже зарегистрирована"</string>
    <string name="user_text">"Пользователь не найден"</string>


</resources>
