<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#014d81"
    tools:context=".Help">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="1dp"
        android:background="@color/colors">
        <TextView
            android:id="@+id/textView121"
            android:layout_width="204dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="108dp"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/adamina"
            android:text="@string/help"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="23sp"
            android:textStyle="bold" />
        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="32dp"
            android:layout_height="23dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="4dp"
            android:layout_marginTop="10dp"
            android:onClick="onClick_Back"
            android:src="@drawable/left"
            android:tint="#FFFFFF" />
    </RelativeLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="1dp"
        android:layout_marginTop="40dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/workingintheprogram"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textSize="26sp" />
            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/theWindowAccount"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textSize="25sp" />
            <TextView
                android:id="@+id/editText2"
                android:layout_width="match_parent"
                android:layout_height="193dp"
                android:background="@null"
                android:ems="10"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center_horizontal"
                android:inputType="none"
                android:paddingLeft="10dp"
                android:paddingRight="5dp"
                android:text="@string/help1"
                android:textAlignment="viewStart"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textSize="23sp"
                android:textStyle="italic" />
            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/theWindowAdd"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textSize="25sp" />
            <TextView
                android:id="@+id/editText3"
                android:layout_width="match_parent"
                android:layout_height="113dp"
                android:background="@null"
                android:ems="10"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center_horizontal"
                android:paddingLeft="10dp"
                android:paddingRight="5dp"
                android:text="@string/help2"
                android:textAlignment="viewStart"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textSize="23sp"
                android:textStyle="italic" />
            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/theWindowMenu"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textSize="25sp" />
            <TextView
                android:id="@+id/editText4"
                android:layout_width="match_parent"
                android:layout_height="298dp"
                android:background="@null"
                android:ems="10"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center_horizontal|fill_vertical"
                android:paddingLeft="10dp"
                android:paddingRight="5dp"
                android:text="@string/help3"
                android:textAlignment="viewStart"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textSize="23sp"
                android:textStyle="italic" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>