<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#014d81"
    tools:context=".Menu">
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bottom_navigation"
        app:itemBackground="@color/colors"
        app:itemTextColor="@drawable/selector"
        app:itemIconTint="@drawable/selector"
        app:menu="@menu/menu_navigation"
        android:layout_alignParentBottom="true"
        app:labelVisibilityMode="unlabeled" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="#045A97"
        tools:context=".AddOperation" >
        <TextView
            android:id="@+id/profile_btn"
            android:layout_width="91dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="316dp"
            android:layout_marginTop="11dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="163dp"
            android:fontFamily="@font/share_tech"
            android:onClick="onClick_profile"
            android:text="@string/profile"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="#7D88F8"
            android:textSize="19sp"
            android:textStyle="bold" />
    </RelativeLayout>
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="174dp"
        android:layout_marginBottom="625dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/menu_text"
        android:textColor="#FFFFFF"
        android:textSize="23sp" />
    <RelativeLayout
        android:id="@+id/relativebtn"
        android:layout_width="match_parent"
        android:layout_height="566dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="36dp"
        tools:context=".MainActivity">
        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="-1dp"
            android:layout_marginTop="1dp"
            android:drawableLeft="@drawable/language"
            android:drawableRight="@drawable/right"
            android:onClick="onClick1"
            android:text="@string/language_text"
            android:textAlignment="viewStart"
            android:textAllCaps="false"
            android:textSize="18sp" />
        <Button
            android:id="@+id/button8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="-2dp"
            android:layout_marginTop="95dp"
            android:drawableLeft="@drawable/poll"
            android:drawableRight="@drawable/right"
            android:onClick="onClick4"
            android:text="@string/statistics"
            android:textAlignment="viewStart"
            android:textAllCaps="false"
            android:textSize="18sp" />
        <Button
            android:id="@+id/button6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="1dp"
            android:layout_marginTop="190dp"
            android:drawableLeft="@drawable/help"
            android:drawableRight="@drawable/right"
            android:onClick="onClick5"
            android:text="@string/help"
            android:textAlignment="viewStart"
            android:textAllCaps="false"
            android:textSize="18sp" />
        <Button
            android:id="@+id/button7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="2dp"
            android:layout_marginTop="238dp"
            android:drawableLeft="@drawable/report"
            android:drawableRight="@drawable/right"
            android:onClick="onClick3"
            android:text="@string/abouttheprogram"
            android:textAlignment="viewStart"
            android:textAllCaps="false"
            android:textSize="18sp" />
        <Button
            android:id="@+id/button9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="1dp"
            android:layout_marginTop="143dp"
            android:drawableLeft="@drawable/reset"
            android:drawableRight="@drawable/right"
            android:onClick="onClick6"
            android:text="@string/resetinformation"
            android:textAlignment="viewStart"
            android:textAllCaps="false"
            android:textSize="18sp" />
        <Button
            android:id="@+id/button5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="1dp"
            android:layout_marginTop="48dp"
            android:drawableLeft="@drawable/currency"
            android:drawableRight="@drawable/right"
            android:onClick="onClick2"
            android:text="@string/currency_text"
            android:textAlignment="viewStart"
            android:textAllCaps="false"
            android:textSize="18sp" />
    </RelativeLayout>
</RelativeLayout>