<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#014d81"
    tools:context=".Profile">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="1dp"
        android:background="@color/colors">
        <TextView
            android:id="@+id/textView121"
            android:layout_width="204dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="108dp"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/adamina"
            android:text="@string/profile"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="23sp"
            android:textStyle="bold" />
        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="32dp"
            android:layout_height="23dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="4dp"
            android:layout_marginTop="10dp"
            android:onClick="onClick_Back"
            android:src="@drawable/left"
            android:tint="#FFFFFF" />
    </RelativeLayout>
    <Button
        android:id="@+id/exit_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="14dp"
        android:layout_marginTop="537dp"
        android:layout_marginEnd="18dp"
        android:drawableLeft="@drawable/exit"
        android:drawableTint="#FFFFFF"
        android:onClick="exit_bt"
        android:text="@string/getout"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="18sp"
        app:strokeColor="#FFFFFF" />

    <Button
        android:id="@+id/exit_reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="14dp"
        android:layout_marginTop="537dp"
        android:layout_marginEnd="18dp"
        android:drawableLeft="@drawable/registration"
        android:drawableTint="#FFFFFF"
        android:onClick="exit_registration"
        android:text="@string/registration"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:visibility="gone"
        android:textSize="18sp"
        app:strokeColor="#FFFFFF" />

    <Button
        android:id="@+id/update_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="421dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/colors"
        android:drawableTint="#FFFFFF"
        android:onClick="updatepass"
        android:text="@string/changepassword"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="18sp"
        app:strokeColor="#FFFFFF" />
    <EditText
        android:id="@+id/pass1"
        android:layout_width="258dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="137dp"
        android:layout_marginBottom="247dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:imeOptions="actionDone"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF" />
    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="14dp"
        android:layout_marginTop="323dp"
        android:text="@string/passwordchange"
        android:textColor="#FFFFFF"
        android:textSize="26sp" />
    <Button
        android:id="@+id/update_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="242dp"
        android:layout_marginEnd="17dp"
        android:backgroundTint="@color/colors"
        android:drawableTint="#FFFFFF"
        android:text="@string/changeemail"
        android:onClick="updateemail"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="18sp"
        app:strokeColor="#FFFFFF" />
    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="598dp"
        android:layout_marginEnd="17dp"
        android:background="#C61A1A"
        android:backgroundTint="#BA2121"
        android:drawableLeft="@drawable/right"
        android:drawableTint="#FFFFFF"
        android:onClick="delete_bt"
        android:text="@string/deleteanaccount"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textSize="18sp" />
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageView5"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="51dp"
        android:src="@drawable/user"
        android:tint="#FFFFFF"
        app:civ_border_color="#FFFFFF"
        app:civ_border_width="2dp" />
    <EditText
        android:id="@+id/eml_ed"
        android:layout_width="259dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="132dp"
        android:layout_marginTop="183dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:enabled="false"
        android:inputType="textEmailAddress"
        android:imeOptions="actionDone"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF" />
    <EditText
        android:id="@+id/eml_ed2"
        android:layout_width="259dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="129dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="23dp"
        android:ems="10"
        android:enabled="false"
        android:inputType="textEmailAddress"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF" />
    <TextView
        android:id="@+id/textView14"
        android:layout_width="108dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="189dp"
        android:text="@string/email"
        android:textColor="#FFFFFF"
        android:textSize="26sp" />
</RelativeLayout>